ui/webui/resources/wasm/vendor/zerocopy/tests/ui-msrv/transmute-ref-src-unsized.stderr
error[E0271]: type mismatch resolving `<[u8; 1] as KnownLayout>::PointerMetadata == usize`
  --> tests/ui-msrv/transmute-ref-src-unsized.rs:16:31
   |
16 | const SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `usize`
   |
   = note: required because of the requirements on the impl of `TransmuteRefDst<'_>` for `Wrap<&[u8], &[u8; 1]>`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
